# xpecs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  README.md  RELEASING.md  package-lock.json  package.json
.changeset/: modern-icon-library.md  reativa-components-batch-one.md  reativa-components-package.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
archetypes/blocks/: cta-section.md  faq.md  feature-grid.md  hero.md  pricing-table.md  testimonial.md
archetypes/components/: accordion.md  alert-dialog.md  alert.md  breadcrumb.md  button-group.md  calendar.md  card.md  carousel.md  chart.md  collapsible.md  combobox.md  command.md  comment.md  context-menu.md  cta-section.md  data-table.md  date-picker.md  dialog.md  drawer.md  dropdown-menu.md  empty-state.md  faq.md  feature-grid.md  field.md  footer.md  form.md  hero.md  hover-card.md  input-group.md  list.md  menubar.md  navbar.md  navigation-menu.md  pagination.md  popover.md  pricing-table.md  resizable.md  search.md  select.md  sheet.md  (+8 more)
responsive/: README.md  patterns.json
schema/: api.schema.json  spec.schema.json  trait.schema.json
scripts/: generate-index.mjs  generate-skill.mjs
skill/: SKILL.md  package.json
templates/: ARCHETYPE_TEMPLATE.md  SPEC_TEMPLATE.md
tokens/: README.md  themes.json  tokens.json
traits/: anchored.md  dismissible.md  focus-trap.md  roving-focus.md  typeahead.md
website/: .gitignore  README.md  index.html  package-lock.json  package.json  rescript.json  vite.config.js
website/reativa/: README.md  dune  dune-project  xpecs_reativa.mlx
(+140 files in other folders)
