(lang dune 3.16)

; A self-contained Melange workspace that compiles the reativa (OCaml) Xpecs
; examples to ES modules. It is intentionally separate from the ReScript/Vite
; website build: `npm run reativa` (in website/) builds this and bundles the
; output into website/src/reativa.bundle.js. Requires opam + melange; see
; website/reativa/README.md.

(using melange 0.1)

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (preprocess
   (run mlx-pp %{input-file}))))
